--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>RadioI</title>
     <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:100,300,300i,400,500&display=swap"
+      href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,300i,400,500&display=swap"
       rel="stylesheet"
     />
-    <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
